force-app/main/default/objects/maps__FolderPermission__c/maps__FolderPermission__c.object-meta.xml
<CustomObject>
    <label>Maps Folder Permission</label>
    <nameField>
        <displayFormat>FP{00000000}</displayFormat>
        <label>Folder Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Folder Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>