force-app/main/default/objects/maps__FolderPermission__c/fields/maps__Export__c.field-meta.xml
<CustomField>
    <fullName>maps__Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export</label>
    <type>Checkbox</type>
</CustomField>