force-app/main/default/objects/maps__FolderPermission__c/fields/maps__Folder__c.field-meta.xml
<CustomField>
    <fullName>maps__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>maps__Folder__c</referenceTo>
    <relationshipLabel>Maps Folder Permissions</relationshipLabel>
    <relationshipName>Maps_Folder_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>