force-app/main/default/objects/maps__FolderPermission__c/fields/maps__Modify__c.field-meta.xml
<CustomField>
    <fullName>maps__Modify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify</label>
    <type>Checkbox</type>
</CustomField>