force-app/main/default/objects/maps__FolderPermission__c/fields/maps__Read__c.field-meta.xml
<CustomField>
    <fullName>maps__Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>