force-app/main/default/objects/maps__FolderPermission__c/fields/maps__SetPermissions__c.field-meta.xml
<CustomField>
    <fullName>maps__SetPermissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Permissions</label>
    <type>Checkbox</type>
</CustomField>